Bug 1115211 - fix overlapping problem by udpating lists.css

--- a/apps/settings/style/lists.css
+++ b/apps/settings/style/lists.css
@@ -469,7 +469,7 @@ dl dd {
  */
 
 html[dir="rtl"] ul li > a span:nth-of-type(2):not(.button) {
-  left: 1.5rem;
+  left: 0;
   right: unset;
 }
 
